# zuazo

./: .gitignore  CMakeLists.txt  Makefile  README.md  dependencies.txt  install_manifest.txt  makefile  test  test00.cpp
.github/workflows/: cmake.yml
Debug/: makefile  sources.mk
Debug/src/: subdir.mk
data/shaders/: alpha2luma.frag  alpha2luma.glsl  black_and_white.frag  brightness_contrast.frag  brightness_contrast.glsl  chroma_key.glsl  copy.frag  grayscale.frag  grayscale.glsl  hsl.glsl  hue_sat_lum.frag  hue_sat_lum.glsl  interp.glsl  invert.frag  invert.glsl  line.vert  luma2alpha.frag  shader_effect.1.frag  shader_effect.2.frag  shader_effect.vert  solid.frag  solid.vert  text.frag  text.vert  texture.frag  texture.vert  video_layer.frag  video_layer.vert  window.frag  window.vert
doc/doxygen/: .gitignore  CMakeLists.txt  Doxyfile.in
examples/: .gitignore  00 - Instantiating.cpp  CMakeLists.txt  Example1.cpp  Example2.cpp  Example3  Example3.cpp  Example4.cpp  Example5.cpp  Example6  Example6.cpp  compile_all.sh
include/: Buffer.h  Buffer.inl  Chrono.h  Color.h  Color.inl  ColorEncoding.h  ColorFormat.h  ColorFormat.inl  ColorModel.h  ColorModel.inl  ColorPrimaries.h  ColorPrimaries.inl  ColorRange.h  ColorRange.inl  ColorSubsampling.h  ColorSubsampling.inl  ColorTransferFunction.h  ColorTransferFunction.inl  Context.h  Context.inl  Exception.h  Includes.h  Includes.h.in  Instance.h  Macros.h  NonLinearUpdate.h  PixelComponent.h  PixelComponent.inl  PixelEncoding.h  PixelFormat.h  PixelFormat.inl  PixelProperties.h  Primitives.h  Resolution.h  Resolution.inl  ScalingFilter.h  ScalingFilter.inl  ScalingMode.h  ScalingMode.inl  StringConversions.h  (+14 more)
include/Consumers/: Window.h
include/Graphics/: Buffer.h  Color.h  Color.inl  ColorTransfer.h  CommandPool.h  Context.h  DrawableBase.h  Drawtable.h  Frame.h  FrameGeometry.h  GLFW.h  Geometry.h  Image.h  ImageAttributes.h  ImageBuffer.h  ImageProperties.h  Instance.h  MappedMemory.h  MatrixOperations.h  Monitor.h  Pipeline.h  PixelComponent.h  PixelComponent.inl  PixelFormat.h  PixelFormat.inl  Pool.h  Pools.h  RenderPass.h  Resolution.h  Resolution.inl  Semaphore.h  ShaderPool.h  ShaderUniform.h  SharedObject.h  StagedBuffer.h  StagedFrame.h  Surface.h  Swapchain.h  Uploader.h  VectorOperations.h  (+7 more)
include/Math/: Funcs.h  Funcs.inl  Functions.inl  Matrix.h  Rational.h  Rational.inl  Vector.h  Vector.inl
include/Misc/: Chronometer.h
include/Outputs/: Window.h
include/Processors/: Alpha2Luma.h  BrightnessContrast.h  ChromaKey.h  Compositor.h  Grayscale.h  HueSaturationLuminosity.h  Invert.h  Luma2Alpha.h  ShaderEffect.h
include/Signal/: AsyncOutput.h  AsyncOutput.inl  Consumer.h  Consumer.inl  ConsumerPad.h  ConsumerPad.inl  DummyInput.h  DummyInput.inl  DummyOutput.h  DummyOutput.inl  DummyPad.h  DummyPad.inl  Input.h  Input.inl  InputPad.h  InputPad.inl  Layout.h  Layout.inl  LazyOutput.h  LazyOutput.inl  Output.h  Output.inl  OutputPad.h  OutputPad.inl  PadBase.h  PadBase.inl  Signal.h  Signal.inl  Source.h  Source.inl  SourcePad.h  SourcePad.inl
include/Sources/: FFmpeg.h  ImageMagick.h  SVG.h  V4L2.h
include/Stream/: AsyncSource.h  Consumer.h  Consumer.inl  ConsumerPad.h  ConsumerPad.inl  Delay.h  DummyPad.h  LazySource.h  Operators.h  Signal.h  Signal.inl  Source.h  Source.inl  SourcePad.h  SourcePad.inl
include/Time/: Units.h  Units.inl
include/Timing/: Chrono.h  Chrono.inl  EventBase.h  EventBase.inl  ExternalEvent.h  ExternalEvent.inl  LazyEvent.h  Loop.h  Loop.inl  MainLoop.h  MainLoop.inl  MainThread.h  MainThread.inl  NonLinear.h  PeriodicEvent.h  PeriodicUpdate.h  RegularEvent.h  RegularUpdate.h  ScheduledEvent.h  Scheduler.h  Timings.h  UpdateOrder.h  UpdateableBase.h
include/Utils/: Buffer.h  Buffer.inl  BufferView.h  BufferView.inl  Codec.h.in  Color.h  Color.inl  Configuration.h  Configuration.inl  CrossThreadInvocation.h  CrossThreadInvocation.inl  Functions.h  Functions.inl  Hash.h  Hash.inl  Hasher.h  Hasher.inl  ImageAttributes.h  ImageBuffer.h  Limitation.h  Limitation.inl  MMBuffer.h  MMBuffer.inl  Macros.h  Matrix.h  PhantomClass.h  Pimpl.h  PixelFormat.h  PixelFormat.h.in  Pool.h  Pool.inl  Rational.h  Rational.inl  Resolution.h  ScalingFilter.h  ScalingMode.h  ScalingModes.h  StaticId.h  StaticId.inl  TimeInterval.h  (+2 more)
include/Video/: VideoBase.h  VideoConsumerBase.h  VideoInputBase.h  VideoOutputBase.h  VideoSourceBase.h  VideoStream.h
include/glad/: glad.h
include/zuazo/: Animation.h  Animation.inl  BlendingMode.h  BlendingMode.inl  Chrono.h  Chrono.inl  ClipBase.h  ColorChromaLocation.h  ColorChromaLocation.inl  ColorFormat.h  ColorFormat.inl  ColorModel.h  ColorModel.inl  ColorPrimaries.h  ColorPrimaries.inl  ColorRange.h  ColorRange.inl  ColorSubsampling.h  ColorSubsampling.inl  ColorTransferFunction.h  ColorTransferFunction.inl  DepthStencilFormat.h  DepthStencilFormat.inl  FourCC.h  FourCC.inl  Instance.h  Keyboard.h  Keyboard.inl  LayerBase.h  Macros.h  Player.h  RendererBase.h  RenderingLayer.h  RenderingLayer.inl  Resolution.h  Resolution.inl  ScalingFilter.h  ScalingFilter.inl  ScalingMode.h  ScalingMode.inl  (+9 more)
shaders/: CMakeLists.txt  ColorTransfer.glsl  Window.frag  Window.vert  color_transfer.glsl  color_transfer.h  color_transfer_constants.h  color_transfer_read.frag  color_transfer_write.frag  copy.frag  copy.vert  line.frag  renderpass_finalization.frag  renderpass_finalization.vert  texture.frag  whole_viewport_triangle.vert  window.frag  window.vert
shaders/include/: ColorTransfer.glsl
src/: Camera.cpp  ClipBase.cpp  ColorSpaces.cpp  Context.cpp  Context.h  FrameRates.cpp  Instance.cpp  LayerBase.cpp  NonLinearUpdate.cpp  PixelFormats.cpp  Player.cpp  RendererBase.cpp  Resolutions.cpp  Timing.cpp  Video.cpp  Zuazo.cpp  ZuazoBase.cpp  glad.c  test.cpp
src/Consumers/: Window.cpp
src/Graphics/: Buffer.cpp  ColorTransfer.cpp  CommandBuffer.cpp  CommandBufferPool.cpp  CommandPool.cpp  Context.cpp  DepthStencil.cpp  Frame.cpp  (+31 more)
test/: CMakeLists.txt  PixelFormat.cpp  Pool.cpp  test_1.cpp
test/Math/: Rational  Rational.cpp
test/Utils/: Rational.cpp
(+410 files in other folders)
